[package]
name = "bad_delaunay_apple"
version = "0.1.0"
edition = "2021"


[features]
default = []
# Adds profile spans to use with the Tracy profiler
profile_traces = ["dep:tracing", "dep:tracing-tracy", "dep:tracing-subscriber"]

[dependencies]
bmp = "0.5.0"
pathfinding = "4.9.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }

tracing = { version = "0.1.40", optional = true }
tracing-tracy = { version = "0.10.5", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
